@@ -1,3 +1,7 @@
+13/03/2019:
+	- Fixed bug in vertical mirroring transformation
+
+
 25/02/2019:
 	- Added check for overly large XMP sizes in JPEGCompressor.cc
 
